[package]
name = "smoltcp-tls"
version = "0.1.0"
authors = ["occheung"]
edition = "2018"

[dependencies]
aes-gcm = "0.7.0"
ccm = "0.2.0"
sha2 = {  version = "0.9.1", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
log = "0.4.11"
generic-array = "0.14.4"

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "alloc"]

[dependencies.rand_core]
version = "0.5.1"
default-features = false
features = []

[dependencies.chacha20poly1305]
version = "0.6.0"
default-features = false
features = [ "alloc", "chacha20" ]

[dependencies.p256]
version = "0.5.0"
default-features = false
features = [ "ecdh", "ecdsa", "arithmetic" ]

# Fetch from master, for "no_std" + "alloc" combination
[dependencies.rsa]
git = "https://github.com/RustCrypto/RSA.git"
default-features = false
features = [ "alloc" ]

[dependencies.nom]
version = "5.1.2"
default-features = false
features= []
