[package]
name = "SaiTLS"
version = "0.1.0"
authors = ["occheung"]
edition = "2018"

[dependencies]
hkdf = "0.9.0"
sha-1 = { version = "0.9.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }
hmac = "0.10.1"
byteorder = { version = "1.3.4", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
log = "0.4.11"
generic-array = "0.14.4"
heapless = "0.5.6"
rust-mqtt = { version = "0.3.0", default-features = false}
embassy-executor = { version = "0.6.0",  features = ["task-arena-size-163840",] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }

[dependencies.aes-gcm]
version = "0.8.0"
default-features = true
features = [ "heapless" ]

[dependencies.ccm]
version = "0.3.0"
default-features = true
features = [ "heapless" ]

[dependencies.smoltcp]
version = "0.7.0"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "alloc"]

[dependencies.rand_core]
version = "0.5.1"
default-features = false


[dependencies.chacha20poly1305]
version = "0.6.0"
default-features = false
features = [ "alloc", "chacha20", "heapless" ]

[dependencies.p256]
version = "0.5.0"
default-features = false
features = [ "ecdh", "ecdsa", "arithmetic" ]

[dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = [ "u64_backend" ]

[dependencies.x25519-dalek]
version = "1.1.0"
default-features = false
features = [ "u64_backend" ]

# Fetch from master, for "no_std" + "alloc" combination
[dependencies.rsa]
git = "https://github.com/RustCrypto/RSA.git"
rev = "c879eb2"
default-features = false
features = [ "alloc" ]

[dependencies.nom]
version = "5.1.2"
default-features = false
features = []

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = []

[dependencies.intrusive-collections]
version = "0.9.0"
default-features = false
features = []

[dependencies.managed]
version = "0.8.0"
default-features = false
features = [ "alloc" ]

[dependencies.simple_logger]
version = "1.11.0"
optional = true

[dependencies.rand]
version = "0.7.0"
optional = true

[dependencies.hex-literal]
version = "0.3.1"
optional = true

# Support `TcpStack` from old version of embedded_nal interface
# It is to operate with crates such as MiniMQ, which still depends on version 0.1.0
[dependencies.embedded-nal-tcp-stack]
package = "embedded-nal"
version = "0.1.0"

[features]
default = []
std = [ "rand", "hex-literal", "simple_logger", "rsa/default" ]
